--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.10.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.10.2",
+    "js-cookie": "^3.0.5",
+    "jsencrypt": "^3.3.2",
     "qs": "^6.14.0",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
