--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "element-plus": "^2.10.2",
     "js-cookie": "^3.0.5",
     "jsencrypt": "^3.3.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "qs": "^6.14.0",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
