--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "core-js": "^3.8.3",
+    "echarts": "^6.0.0",
     "element-plus": "^2.10.2",
     "js-cookie": "^3.0.5",
     "jsencrypt": "^3.3.2",
