--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass-loader": "^16.0.5",
     "svg-sprite-loader": "^6.0.11",
     "vue": "^3.2.13",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
     "webpack": "^5.99.9"
