--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "echarts": "^6.0.0",
     "element-plus": "^2.10.2",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "jsencrypt": "^3.3.2",
     "moment": "^2.30.1",
